[gd_scene load_steps=3 format=3 uid="uid://upgrade_shop"]

[ext_resource type="Script" path="res://Scripts/UI/upgrade_shop.gd" id="1_upgrade_shop"]

[node name="UpgradeShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_upgrade_shop")
groups = ["upgrade_shop"]

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MainPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "升级商店"
horizontal_alignment = 1

[node name="UpgradeContainer" type="VBoxContainer" parent="MainPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RefreshButton" type="Button" parent="MainPanel/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "刷新"

[node name="RefreshCostLabel" type="Label" parent="MainPanel/VBoxContainer/ButtonContainer/RefreshButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -20.0
offset_right = -5.0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "刷新: 2 金币"

[node name="CloseButton" type="Button" parent="MainPanel/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "关闭"

